--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -421,8 +421,9 @@ input.input100 {
 }
 
 .label-checkbox100::before {
-  content: "\f00c";
   font-family: "Font Awesome 5 Free";
+  font-weight: 900;  
+  content: "\f00c";
   font-size: 13px;
   color: transparent;
 
@@ -494,6 +495,48 @@ input.input100 {
 }
 
 .login100-form-btn:hover {
+  background: #333333;
+}
+
+.container-getpass100-form-btn {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.getpass100-form-btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  background: #cc9900;
+
+  font-family: Montserrat-Bold;
+  font-size: 12px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.getpass100-form-btn:hover {
   background: #333333;
 }
 
@@ -574,8 +617,9 @@ input.input100 {
 }
 
 .alert-validate::after {
-  content: "\f12a";
-  font-family: FontAwesome;
+  font-family: "Font Awesome 5 Free"; 
+  font-weight: 900; 
+  content: "\f06a";
   display: block;
   position: absolute;
   z-index: 110;
